--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+# If files were previously tracked, you need to untrack them first with:
+# git rm -r --cached .
+# Then commit the changes
 /node_modules
+/backend/node_modules
+/frontend/node_modules
 
 # next.js
 /.next/
